--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -70,7 +70,7 @@
 		<!-- <script src="js/3rdparty/dataTables.buttons.min.js"></script> -->
 		<!-- Chartjs v2.7.0 -->
 		<script src="js/3rdparty/Chart.bundle.min.js"></script>
-		<!-- Chartjs - Data Labels -- v0.1.0 -->
+		<!-- Chartjs - Data Labels - v0.1.0 -->
 		<script src="js/3rdparty/chartjs-plugin-datalabels.js"></script>
 		<!-- Google Charts Loader v? - Not sure if this library is needed -->
 		<script src="js/3rdparty/loader.js"></script>
@@ -96,29 +96,3 @@
 	
 	</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
