Created way to access Google APps Script in a cors compliant way

--- a/Development/testGScript.html
+++ b/Development/testGScript.html
@@ -8,6 +8,9 @@
 		</style>
 	</head>
 	<body>
+
+		<button onclick='main()'>Fire</button>
+
 		<iframe id='iframe' width='0' height='0' src='#'></iframe>
 		<script src='jquery.min.js'></script>
 		<script src='underscore.min.js'></script>
