--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	
-		<title>UWM Planetarium - Ease</title>
 		
+		<title>UWM Planetarium - Ease</title>
+
 		<!-- 3rd party styles -->
 		<!-- Bootstrap v3.3.7 -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +20,11 @@
 		<!-- C3 Graphs v0.4.18 -->
 		<link href="css/c3.min.css" rel="stylesheet">
 		
+		<!-- Favicon WITH rounded corners-->
+		<link rel="icon" type="image/png/icon" href="https://i.imgur.com/jVsE9Bp.png" >	
+			<!-- Favicon WITHOUT rounded corners
+			<link rel="icon" type="image/png/icon" href="https://i.imgur.com/lUYETTP.png" >	-->
+
 		<!-- Google Font - Montserrat -->
 		<!-- needs link when hosted -->
 		
