--- a/Development/testGScript.html
+++ b/Development/testGScript.html
@@ -8,8 +8,10 @@
 		</style>
 	</head>
 	<body>
+
+		<button onclick='main()'>Fire</button>
+
 		<iframe id='iframe' width='0' height='0' src='#'></iframe>
-		
 		<script src='jquery.min.js'></script>
 		<script src='underscore.min.js'></script>
 		<script src='backbone.min.js'></script>
