--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -53,6 +53,8 @@
 		
 		<!-- Templates -->
 		<div id="templates"></div>
+
+		<iframe id='iframe' width='0' height='0' src='#'></iframe>
 		
 		<!-- 3rd party scripts -->
 		<!-- jQuery v3.2.1 -->
