Fixed file names

--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -21,9 +21,7 @@
 		<link href="css/c3.min.css" rel="stylesheet">
 		
 		<!-- Favicon WITH rounded corners-->
-		<link rel="icon" type="image/png/icon" href="https://i.imgur.com/jVsE9Bp.png" >	
-			<!-- Favicon WITHOUT rounded corners
-			<link rel="icon" type="image/png/icon" href="https://i.imgur.com/lUYETTP.png" >	-->
+		<link rel="icon" type="image/icon" href="favicon.ico" >	
 
 		<!-- Google Font - Montserrat -->
 		<!-- needs link when hosted -->
