Changed google.script to app.iframe.request

--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -70,9 +70,9 @@
 		<!-- FullCalendar v3.5.1 -->
 		<script src="js/3rdparty/fullcalendar.min.js"></script>
 		<!-- DOESN'T WORK jQuery Data Tables v1.10.16 -->
-		<!-- <script src="js/3rdparty/jquery.dataTables.min.js"></script> -->
+		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 		<!-- DOESN'T WORK jQuery Data Tables - Butttons - v1.4.2 -->
-		<!-- <script src="js/3rdparty/dataTables.buttons.min.js"></script> -->
+		<script src="https://cdn.datatables.net/buttons/1.5.1/js/dataTables.buttons.min.js"></script>
 		<!-- Chartjs v2.7.0 -->
 		<script src="js/3rdparty/Chart.bundle.min.js"></script>
 		<!-- Chartjs - Data Labels - v0.1.0 -->
