Added event validation, event searching, & small UI changes

--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -82,7 +82,9 @@
 		<!-- Firebase v2.0.3 -->
 		<script src="js/3rdparty/firebase.js"></script>
 		<!-- BackboneFire v0.5.1 -->
-		<script src="js/3rdparty/backbonefire.js"></script>
+    <script src="js/3rdparty/backbonefire.js"></script>
+    <!-- Lodash -->
+    <script src="js/3rdparty/lodash.js"></script>
 		
 		<!-- Initialize App, View, User -->
 		<script type="text/javascript">
